# explore

./: .gitignore  pyproject.toml
college/: DATACATALOG.py  Dispersion_Relation.py  afterAS.py  afterASmovingratio.py  afterASmovingratioresample.py  afterASratio.py  afterASresample.py  afterFFT.py  afterdevil.py  aftermovingAS.py  aftermovingFFT.py  aftermovingratioresample.py  afterratio.py  afterrmovingratio.py  dailychange_p.py  focusFFT.py  focuschange_p.py  focusmovingFFT.py  focusmovingratio.py  focusmovingratio_resample.py  focusmovingratioresample.py  focusratio.py  meanAS_sorteddP.py  meanASmovingratio_sorteddP.py  meanASratio_sorteddP.py  meanFFT_sortedATandWs.py  meanFFT_sortedTandWs.py  meanFFT_sorteddP.py  meanFFT_sortedseason.py  meanafterAS_sorteddP.py  meanafterASmovingratio_sorteddP.py  meanafterASratio_sorteddP.py  meanafterFFT_sorteddP.py  meanaftermovingAS_sorteddP.py  meanaftermovingFFT_sorteddP.py  meanaftermovingratio_sorteddP.py  meanafterratio_sorteddP.py  meanfocusFFT.py  meanfocusmovingFFT.py  meanfocusmovingratio.py  (+35 more)
