[tool.poetry]
name = "explore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.21.1"
pandas = "1.3.5"
datetime = "^5.5"
matplotlib = "3.5.0"
seaborn = "0.13.2"
argparse = "1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
